--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,12 +1,17 @@
-<div class="flex-center flex-col">
-  <h5 class="login-title text-color-main">
-    Chào mừng bạn đến với PhongVu.vn |
-    Laptop, PC, Màn hình, điện thoại,
-    linh kiện Chính Hãng!
+<app-header></app-header>
+<div class="w-full ">
+  <div class="flex-center flex-col p-[5rem] ">
+    <div class="max-w-[25rem]">
+      <h5 class="login-title text-color-main">
+        Chào mừng bạn đến với PhongVu.vn |
+        Laptop, PC, Màn hình, điện thoại,
+        linh kiện Chính Hãng!
 
-  </h5>
-  <app-button [buttonText]="buttonText"></app-button>
+      </h5>
+      <app-button [buttonText]="buttonText"></app-button>
+    </div>
 
 
+  </div>
 </div>
 <app-footer></app-footer>
