--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="mt-4 border-t-[3px] border-solid border-[#1435C3]">
-  <div class="sm:pr-4 sm:pl-4 lg:pr-36 lg:pl-36">
-    <div class="flex  flex-wrap   gap-4 leading-7  pt-5">
+  <div class="sm:pr-4 sm:pl-4 lg:pr-36 lg:pl-36 ">
+    <div class="flex  flex-wrap   gap-8 leading-7  pt-5 pl-2">
       <div class="" *ngFor="let item of itemFooter">
         <div class="">
           <span class="title-footer">{{item.title}}</span>
@@ -29,26 +29,26 @@
         <img class="mt-4" src="./assets/image/vnpaybanks.png" alt="">
       </div>
     </div>
-    <div class="flex mt-8 mb-4 gap-4 flex-wrap">
+
+  </div>
+  <div class="flex mt-8 mb-4 gap-4 flex-wrap sm:pr-4 sm:pl-4 lg:pr-36 lg:pl-36 bg-[#e9edf2] pt-9 pb-9 pl-2">
+    <div>
+      <span class="font-bold text-color-main text-sm uppercase">Công ty cổ phần thương mại - dịch vụ phong vũ</span>
+      <p class="text-xs max-w-[493px]  pt-4 leading-6 ">
+        © 1997 - 2020 Công Ty Cổ Phần Thương Mại - Dịch Vụ Phong Vũ
+        Giấy chứng nhận đăng ký doanh nghiệp: 0304998358 do Sở KH-ĐT TP.HCM cấp lần đầu ngày 30 tháng 05 năm 2007
+      </p>
+    </div>
+    <div class="flex gap-4 flex-wrap ">
       <div>
-        <span class="font-bold text-color-main text-sm uppercase">Công ty cổ phần thương mại - dịch vụ phong vũ</span>
-        <p class="text-xs max-w-[493px]  pt-4 leading-6 ">
-          © 1997 - 2020 Công Ty Cổ Phần Thương Mại - Dịch Vụ Phong Vũ
-          Giấy chứng nhận đăng ký doanh nghiệp: 0304998358 do Sở KH-ĐT TP.HCM cấp lần đầu ngày 30 tháng 05 năm 2007
-        </p>
+        <div *ngFor="let addressItem of addressFooter">
+          <span class="text-xs font-bold text-color-main">{{addressItem.title}}</span>
+          <p class="text-xs">{{addressItem.address}}</p>
+        </div>
       </div>
-      <div class="flex gap-4 flex-wrap">
-        <div>
-          <div>
-            <span class="text-xs font-bold text-color-main">Địa chỉ trụ sở chính</span>
-            <p class="text-xs">Tầng 5, Số 117-119-121 Nguyễn Du,
-              Phường Bến Thành, Quận 1, Thành Phố Hồ Chí Minh</p>
-          </div>
-        </div>
-        <div>
-          <img class="w-40" src="./assets/image/footer/daDangKy.png" alt="">
-          <img class="w-24" src="./assets/image/footer/daDangky2.png" alt="">
-        </div>
+      <div>
+        <img class="w-40" src="./assets/image/footer/daDangKy.png" alt="">
+        <img class="w-24" src="./assets/image/footer/daDangky2.png" alt="">
       </div>
     </div>
   </div>
