--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,3 +4,16 @@
 .flex-justify-between {
   @apply flex justify-between items-center;
 }
+html {
+  scroll-behavior: smooth;
+}
+.button-gotoTop {
+  position: fixed;
+  bottom: 30px;
+  right: 10px;
+  font-size: 40px;
+  text-align: center;
+  border-radius: 5px;
+  outline: none;
+
+}
