--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="fixed top-0 z-30 w-full bg-white">
   <div class="header-banner">
     <img src="./assets/image/header/banner.webp" alt="">
   </div>
@@ -27,19 +27,30 @@
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Marketplace</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Partners</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3]">Pricing</a>
-
+              <div class="flex ml-1">
+                <input type="text"
+                  class="w-[478px] px-[6px] py-[12px] rounded outline-none bg-[#f5f5f5] text-[#33333] leading-5 border border-solid border-[#eaeaea]"
+                  placeholder="Nhập từ cần tìm" />
+                <button class=" bg-[#1435c3]  rounded-lg px-[1rem]  text-white text-center text-sm">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                    stroke="currentColor" class="w-4 h-4">
+                    <path strokeLinecap="round" strokeLinejoin="round"
+                      d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                  </svg>
+                </button>
+              </div>
             </div>
 
             <div class="hidden sm:flex sm:items-center">
 
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Đăng ký</a>
-              <a href="#"
+              <a routerLink="dang-nhap"
                 class="text-gray-800 text-sm  border px-4 py-2 rounded-lg hover:text-[#1435c3] hover:border-[#1435c3]">Đăng
                 nhập</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">
                 <fa-icon [icon]="bellIcon"></fa-icon>
               </a>
-              <a href="#" class="text-gray-800 text-sm hover:text-[#1435c3] mr-4">
+              <a routerLink="gio-hang" class="text-gray-800 text-sm hover:text-[#1435c3] mr-4">
                 <fa-icon [icon]="cartIcon"></fa-icon>
                 <span> Giỏ hàng (2) </span>
               </a>
@@ -60,6 +71,18 @@
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mb-1">Marketplace</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mb-1">Partners</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mb-1">Pricing</a>
+              <div class="flex ml-1">
+                <input type="text"
+                  class="w-[478px] px-[6px] py-[12px] rounded outline-none bg-[#f5f5f5] text-[#33333] leading-5 border border-solid border-[#eaeaea]"
+                  placeholder="Nhập từ cần tìm" />
+                <button class=" bg-[#1435c3]  rounded-lg px-[1rem]  text-white text-center text-sm">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                    stroke="currentColor" class="w-4 h-4">
+                    <path strokeLinecap="round" strokeLinejoin="round"
+                      d="M21 21l-5.197-5.197m0 0A7.5 7.5 0 105.196 5.196a7.5 7.5 0 0010.607 10.607z" />
+                  </svg>
+                </button>
+              </div>
               <div class="flex justify-between items-center border-t-2 pt-2">
                 <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Sign in</a>
                 <a href="#"
