--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,14 @@
 <app-header></app-header>
-<div class="w-full ">
-  <div class="flex-center flex-col p-[5rem] ">
-    <div class="max-w-[25rem]">
+<div class="w-full lg:pt-5 pt-[11rem] ">
+  <div class="flex-center flex-col sm:p-2 lg:p-[5rem] ">
+    <div class="max-w-[25rem] sm:pt-[10rem] pt-[3rem]">
       <h5 class="login-title text-color-main">
         Chào mừng bạn đến với PhongVu.vn |
         Laptop, PC, Màn hình, điện thoại,
         linh kiện Chính Hãng!
 
       </h5>
-      <app-button [buttonText]="buttonText"></app-button>
+      <app-button [isCheckPhone]="isCheckPhone" is [buttonText]="buttonText"></app-button>
     </div>
 
 
