--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -44,13 +44,13 @@
             <div class="hidden sm:flex sm:items-center">
 
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Đăng ký</a>
-              <a routerLink="dang-nhap"
+              <a routerLink="/dang-nhap"
                 class="text-gray-800 text-sm  border px-4 py-2 rounded-lg hover:text-[#1435c3] hover:border-[#1435c3]">Đăng
                 nhập</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">
                 <fa-icon [icon]="bellIcon"></fa-icon>
               </a>
-              <a routerLink="gio-hang" class="text-gray-800 text-sm hover:text-[#1435c3] mr-4">
+              <a routerLink="/gio-hang" class="text-gray-800 text-sm hover:text-[#1435c3] mr-4">
                 <fa-icon [icon]="cartIcon"></fa-icon>
                 <span> Giỏ hàng (2) </span>
               </a>
