--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,63 +1,165 @@
 <app-header></app-header>
-<div class="cart row">
-  <div class="col-8">
-    <table class="table ">
-      <thead>
-        <tr>
-          <th scope="col">
-            <input type="checkbox" name="" id="">
-          </th>
-          <th scope="col">CÔNG TY CỔ PHẦN THƯƠNG MẠI DỊCH VỤ PHONG VŨ
-          </th>
-          <th scope="col">Đơn giá</th>
-          <th scope="col">Số lượng</th>
-          <th scope="col">Thành tiền</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr class="">
-          <th scope="row">
-            <input type="checkbox" name="" id="">
-          </th>
-          <td class="d-flex left_cart align-items-center">
-            <img width="80px"
-              src="https://cdn.yousport.vn/Media/Products/230522120021029/mira-galaxy-s1-den-xanh-1b_large.jpg?width=284&height=213&quality=99&scale=downscaleonly"
-              alt="">
-            <p>Giày Mira Galaxy S1
-            </p>
-          </td>
-          <td>
-            <p>17.490.000đ</p>
-            <p>20.000.000</p>
-          </td>
-          <td>
+<div class="">
+  <div class="px-4 mt-52 flex justify-center items-start flex-wrap gap-4">
+    <section class=" " x-data="app">
+      <div class="flex flex-col justify-center h-full">
+        <!-- Table -->
 
-            <input style="width: 50px;" type="number" name="" id="">
+        <div class="w-full max-w-3xl mx-auto bg-white rounded-sm border p-3 border-gray-200">
+          <div class="mb-2">
+            <ul class="flex gap-2">
+              <li><a href="/">Trang chủ </a></li>
+              <li>
+                <fa-icon [icon]="nextIcon"></fa-icon>
+              </li>
+              <li><a href="/">Giỏ hàng</a></li>
+            </ul>
+          </div>
+          <div class="px-5 py-4 border-b border-gray-100">
+            <div class="font-semibold text-color-main">Giỏ hàng</div>
+          </div>
 
-          </td>
-          <td>
-            17.490.000
-          </td>
-        </tr>
+          <div class="overflow-x-auto p-3">
+            <table class="table-auto w-full">
+              <thead class="text-xs text-color-main bg-gray-50">
+                <tr class="">
+                  <th class="p-2">
+                    <input type="checkbox" class="w-5 h-5" value="id-1" />
+                  </th>
+                  <th class="p-2">
+                    <div class="text-left">Tên sản phẩm</div>
+                  </th>
+                  <th class="p-2">
+                    <div class="text-left">Hình ảnh</div>
+                  </th>
+                  <th class="p-2">
+                    <div class="text-center">Số lương</div>
+                  </th>
+                  <th class="p-2">
+                    <div class="text-left">Đơn giá</div>
+                  </th>
+                  <th class="p-2">
+                    <div class="text-left">Thành tiền</div>
+                  </th>
+                  <th class="p-2">
+                    <div
+                      class="text-center text-[#1990ff] hover:text-[#ff0000] hover:transition-all ease-linear delay-200 cursor-pointer">
+                      Xóa tất cả
+                    </div>
+                  </th>
+                </tr>
+              </thead>
 
-      </tbody>
-    </table>
-  </div>
-  <div class="col-4 mt-3 ">
-    <div class="right_cart">
-      <span>Thanh toán</span>
-      <div class="pay">
-        <div class="pay_item">
-          <span>Tổng tạm tính</span>
-          <span>17.490.000</span>
-        </div>
-        <div class="pay_item">
-          <span>Tổng tạm tính</span>
-          <span>17.490.000</span>
+              <tbody class="text-sm divide-y divide-gray-100">
+                <!-- record 1 -->
+                <tr class="" *ngFor="let cart of listProductCart">
+                  <td class="p-2">
+                    <input type="checkbox" class="w-5 h-5" value="id-1" />
+                  </td>
+                  <td class="p-2">
+                    <div class="text-xs text-color-main">
+                      {{cart.name}}
+                    </div>
+                  </td>
+                  <td class="p-2">
+                    <div class="text-color-main flex justify-center items-center border border-solid border-[#eeeeee]">
+                      <img width="80" src="{{cart.image}}" alt="" />
+                    </div>
+                  </td>
+                  <td class="p-2">
+                    <div class="text-left">
+                      <div class="custom-number-input flex flex-col items-center h-10 w-32 bg-[#f8f8fc]">
+                        <div class="flex flex-row h-10 w-full rounded-lg relative bg-transparent mt-1">
+                          <button data-action="decrement" (click)="countDown(cart.id,cart.priceDiscount)"
+                            class="text-gray-600 h-full w-20 rounded-l cursor-pointer outline-none">
+                            <span class="m-auto text-2xl font-thin">−</span>
+                          </button>
+                          <input type="number"
+                            class="focus:outline-none text-center w-full font-semibold text-md hover:text-black focus:text-black md:text-basecursor-default flex items-center text-gray-700 outline-none"
+                            name="custom-input-number" value="{{ cart.amount}}" />
+                          <button (click)="countUp(cart.id,cart.priceDiscount)" data-action="increment"
+                            class="h-full w-20 rounded-r cursor-pointer">
+                            <span class="m-auto text-2xl font-thin">+</span>
+                          </button>
+                        </div>
+
+                        <button
+                          class="text-[#1990ff] mt-3 hover:text-[#ff0000] hover:transition-all ease-linear delay-200 cursor-pointer">
+                          Xóa
+                        </button>
+                      </div>
+                    </div>
+                  </td>
+                  <td class="p-2">
+                    <div class="text-left font-bold text-color-main">
+                      {{cart.priceDiscount}}
+                    </div>
+                    <div class="text-left leading-5 line-through text-xs text-[#82869e]">
+                      {{cart.price}}
+                    </div>
+                  </td>
+                  <td class="p-2">
+                    <div class="font-bold text-color-main">{{cart.intoMoney}}</div>
+                  </td>
+                  <td class="p-2">
+                    <div class="flex justify-center">
+                      <button>
+                        <svg class="w-8 h-8 rounded-full hover:bg-gray-100 hover:text-[#ff0000] p-1" fill="none"
+                          stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
+                          </path>
+                        </svg>
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+
+                <!-- record 2 -->
+
+                <!-- record 3 -->
+              </tbody>
+            </table>
+          </div>
+
+          <!-- total amount -->
         </div>
       </div>
-    </div>
-    <button class="btn_cart">Thanh toán</button>
+    </section>
+    <section class=" max-w-[25rem] lg:w-1/3 h-full ">
+      <div class="">
+        <div class="bg-white rounded-sm border p-3 border-gray-200 mb-4">
+          <div class="flex justify-between mb-2">
+            <div class="cart-title">Khuyến mãi</div>
+            <a href="" class="text-[#1990ff] text-sm">
+              <fa-icon [icon]="bookMarkIcon"></fa-icon>
+              Chọn hoặc nhập mã khuyến mãi</a>
+          </div>
+          <p class="text-[#82869e] text-base">
+            Đơn hàng chưa đủ điều kiện áp dụng khuyến mãi. Vui lòng mua thêm để
+            áp dụng
+          </p>
+        </div>
+        <div class="bg-white rounded-sm border p-3 border-gray-200">
+          <div class="cart-title mb-4">Thanh toán</div>
+          <div class="flex justify-between mb-1">
+            <span>Tổng tạm tính</span>
+            <span class="text-color-main font-bold text-base">{{sumMoney}} đ</span>
+          </div>
+          <div class="flex justify-between">
+            <span>Tổng tiền</span>
+            <div class="flex flex-col items-center">
+              <span class="text-[#1435c3] font-bold text-base">{{sumMoney}}</span>
+              <span class="block text-[#82869e] font-medium text-xs">(Đã bao gồm VAT)</span>
+            </div>
+          </div>
+          <button
+            class="block mt-11 w-full bg-color-primary hover:bg-color-primary focus:shadow-outline focus:outline-none text-white py-3 px-10 rounded">
+            Thanh toán
+          </button>
+        </div>
+      </div>
+    </section>
   </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
