--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
-<header class="fixed top-0 z-30 w-full bg-white">
-  <div class="header-banner">
+<header class="fixed top-0 z-30 w-full bg-white ">
+  <div class="header-banner hidden lg:block">
     <img src="./assets/image/header/banner.webp" alt="">
   </div>
   <div class="">
     <div class="flex justify-center items-center flex-wrap bg-[#024dbc] p-3 text-white">
-      <ul class="flex gap-7 flex-wrap">
-        <li *ngFor="let item of menuUp"><a href="/" class="flex gap-2">
+      <ul class="flex gap-8 flex-wrap">
+        <li *ngFor="let item of menuUp"><a [routerLink]="item.link" class="flex gap-2">
             <fa-icon [icon]="item.icon"></fa-icon>
             <span>{{item.name}}</span>
           </a></li>
@@ -84,10 +84,10 @@
                 </button>
               </div>
               <div class="flex justify-between items-center border-t-2 pt-2">
-                <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Sign in</a>
-                <a href="#"
-                  class="text-gray-800 text-sm  border px-4 py-1 rounded-lg hover:text-[#1435c3] hover:border-[#1435c3]">Sign
-                  up</a>
+                <a href="/dang-nhap" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Đăng nhập</a>
+                <a href="/gio-hang"
+                  class="text-gray-800 text-sm  border px-4 py-1 rounded-lg hover:text-[#1435c3] hover:border-[#1435c3]">Giỏ
+                  hàng</a>
               </div>
             </div>
           </div>
