--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,87 +1,89 @@
 <app-header></app-header>
-<div class="fade" *ngIf="images && images.length > 0 " class="silder">
-  <img *ngFor="let image of images;let i = index " [ngClass]="{'image-active' : selectIndex=== i}" [src]="image.url"
-    [alt]="image.alt" class="object-contain">
-  <div class="carousel-dot-container">
-    <span (click)="selectImage(i)" [ngClass]="{'active' : selectIndex === i}" class="dot"
-      *ngFor="let dot of images;let i =index">
+<div class="pt-40">
+  <div class="fade  hidden lg:block " *ngIf="images && images.length > 0 " class="silder">
+    <img *ngFor="let image of images;let i = index " [ngClass]="{'image-active' : selectIndex=== i}" [src]="image.url"
+      [alt]="image.alt" class="object-contain">
+    <div class="carousel-dot-container">
+      <span (click)="selectImage(i)" [ngClass]="{'active' : selectIndex === i}" class="dot"
+        *ngFor="let dot of images;let i =index">
 
-    </span>
-  </div>
-  <div class="flex justify-between items-center absolute top-[50%] text-red-400">
-    <div class="btn-carousel btn-prev  ">
-      <button (click)="OnPrevClick()" class="btn-carousel btn-prev">
-        <fa-icon [icon]="leftIcon"></fa-icon>
-      </button>
+      </span>
     </div>
-    <div class="btn-carousel btn-next ">
-      <button (click)="OnNextClick()" class="btn-carousel btn-prev">
-        <fa-icon [icon]="nextIcon"></fa-icon>
-      </button>
-    </div>
-  </div>
-</div>
-<div class="flex flex-col justify-center items-center bg-[#F8F8FC]">
-  <section class=" min-h-screen body-font text-gray-600 sm:px-3 lg:px-40 ">
-    <div class="container mx-auto px-5 py-10">
-      <div class="-m-4 bg-white flex flex-wrap  ">
-        <div class="w-full border border-solid border-[#eeeeee] p-4 md:w-1/2  lg:w-1/4"
-          *ngFor="let product of listProduct">
-          <a class="relative block h-48 overflow-hidden rounded">
-            <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer"
-              src="{{product.image}}" />
-          </a>
-          <div class="mt-4">
-            <a href="">
-              <h3 class=" mb-1 text-xs tracking-widest text-gray-500">{{product.brand}}</h3>
-              <div class=" text-xs font-medium text-gray-900">{{product.name}}</div>
-              <div class="flex justify-between">
-                <div>
-                  <p class="mt-1 text-color-primary font-bold">{{product.percentPrice}}đ</p>
-                  <div class="flex">
-                    <p class="mt-1 line-through">{{product.price}}đ</p>
-                    <p class="text-color-primary">-{{product.reducedPrice}}%</p>
-                  </div>
-                </div>
-                <div *ngIf="product.freeShip">
-                  <fa-icon class="text-sm text-[#30cd60]" [icon]="freeShip"></fa-icon>
-                </div>
-              </div>
-            </a>
-          </div>
-        </div>
-
+    <div class="flex justify-between items-center absolute top-[50%] text-red-400">
+      <div class="btn-carousel btn-prev  ">
+        <button (click)="OnPrevClick()" class="btn-carousel btn-prev">
+          <fa-icon [icon]="leftIcon"></fa-icon>
+        </button>
+      </div>
+      <div class="btn-carousel btn-next ">
+        <button (click)="OnNextClick()" class="btn-carousel btn-prev">
+          <fa-icon [icon]="nextIcon"></fa-icon>
+        </button>
       </div>
     </div>
-  </section>
-  <nav aria-label="Page navigation">
-    <ul class="inline-flex space-x-2">
-      <li><button
-          class="flex items-center justify-center w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">
-          <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
-            <path
-              d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
-              clip-rule="evenodd" fill-rule="evenodd"></path>
-          </svg></button>
-      </li>
-      <li><button
-          class="w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">1</button>
-      </li>
-      <li><button
-          class="w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">2</button>
-      </li>
-      <li><button
-          class="w-10 h-10 text-white transition-colors duration-150 bg-indigo-600 border border-r-0 border-indigo-600 rounded-full focus:shadow-outline">3</button>
-      </li>
-      <li><button
-          class="flex items-center justify-center w-10 h-10 text-indigo-600 transition-colors duration-150 bg-white rounded-full focus:shadow-outline hover:bg-indigo-100">
-          <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
-            <path
-              d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
-              clip-rule="evenodd" fill-rule="evenodd"></path>
-          </svg></button>
-      </li>
-    </ul>
-  </nav>
+  </div>
+  <div class="flex flex-col justify-center items-center bg-[#F8F8FC]">
+    <section class=" min-h-screen body-font text-gray-600 sm:px-3 lg:px-40 ">
+      <div class="container mx-auto px-5 py-10">
+        <div class="-m-4 bg-white flex flex-wrap  ">
+          <div class="w-full border border-solid border-[#eeeeee] p-4 md:w-1/2  lg:w-1/4"
+            *ngFor="let product of listProduct">
+            <a class="relative block h-48 overflow-hidden rounded">
+              <img alt="ecommerce" class="block h-full w-full object-cover object-center cursor-pointer"
+                src="{{product.image}}" />
+            </a>
+            <div class="mt-4">
+              <a href="">
+                <h3 class=" mb-1 text-xs tracking-widest text-gray-500">{{product.brand}}</h3>
+                <div class=" text-xs font-medium text-gray-900">{{product.name}}</div>
+                <div class="flex justify-between">
+                  <div>
+                    <p class="mt-1 text-color-primary font-bold">{{product.percentPrice}}đ</p>
+                    <div class="flex">
+                      <p class="mt-1 line-through">{{product.price}}đ</p>
+                      <p class="text-color-primary">-{{product.reducedPrice}}%</p>
+                    </div>
+                  </div>
+                  <div *ngIf="product.freeShip">
+                    <fa-icon class="text-sm text-[#30cd60]" [icon]="freeShip"></fa-icon>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+    <nav aria-label="Page navigation">
+      <ul class="inline-flex space-x-2">
+        <li><button
+            class="flex items-center justify-center w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">
+            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+              <path
+                d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z"
+                clip-rule="evenodd" fill-rule="evenodd"></path>
+            </svg></button>
+        </li>
+        <li><button
+            class="w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">1</button>
+        </li>
+        <li><button
+            class="w-10 h-10 text-indigo-600 transition-colors duration-150 rounded-full focus:shadow-outline hover:bg-indigo-100">2</button>
+        </li>
+        <li><button
+            class="w-10 h-10 text-white transition-colors duration-150 bg-indigo-600 border border-r-0 border-indigo-600 rounded-full focus:shadow-outline">3</button>
+        </li>
+        <li><button
+            class="flex items-center justify-center w-10 h-10 text-indigo-600 transition-colors duration-150 bg-white rounded-full focus:shadow-outline hover:bg-indigo-100">
+            <svg class="w-4 h-4 fill-current" viewBox="0 0 20 20">
+              <path
+                d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"
+                clip-rule="evenodd" fill-rule="evenodd"></path>
+            </svg></button>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </div>
 <app-footer></app-footer>
