--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
 <router-outlet></router-outlet>
-<button class="button-gotoTop" *ngIf="isShow" (click)="gotoTop()">
-  <fa-icon class="text-color-primary" [icon]="upIcon"></fa-icon>
+
+<div class="">
+  <button *ngFor="let contact of contacts"
+    class="fixed right-[10px] text-[#fff] bottom-[100px] w-[50px] h-[50px] p-[8px] rounded-[50%]   z-[1000]  "
+    data-tooltip-placement="left" data-tooltip-target="tooltip-left"
+    [ngClass]="contact.id ===contact.id ? contact.style : ''">
+    <fa-icon [icon]="contact.icon"></fa-icon>
+
+  </button>
+</div>
+<button
+  class="fixed right-[15px] text-[#fff] bottom-[30px] text-[50px] w-[50px] h-[50px] p-[8px] rounded-[50%]   z-[1000] "
+  *ngIf="isShow" (click)="gotoTop()">
+  <fa-icon class="text-color-main" [icon]="upIcon"></fa-icon>
 </button>
