--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,5 +15,28 @@ html {
   text-align: center;
   border-radius: 5px;
   outline: none;
+  width: 50px;
+  height: 50px;
 
+}
+.button-contacts {
+  position: fixed;
+  bottom: 100px;
+  right: 10px;
+  font-size: 40px;
+
+  text-align: center;
+  border-radius: 50%;
+  outline: none;
+  padding: 5px 10px;
+}
+.facebook {
+  position: fixed;
+  bottom: 100px;
+  right: 10px;
+  font-size: 40px;
+  text-align: center;
+  border-radius: 50%;
+  outline: none;
+  padding: 5px 10px;
 }
