--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="hidden sm:flex sm:items-center">
-              <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Sản phẩm</a>
+              <a routerLink="/san-pham" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Sản phẩm</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Marketplace</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Partners</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3]">Pricing</a>
@@ -45,7 +45,7 @@
 
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">Đăng ký</a>
               <a routerLink="/dang-nhap"
-                class="text-gray-800 text-sm  border px-4 py-2 rounded-lg hover:text-[#1435c3] hover:border-[#1435c3]">Đăng
+                class="text-gray-800 text-sm  mr-2 border px-4 py-2 rounded-lg hover:text-[#1435c3] hover:border-[#1435c3]">Đăng
                 nhập</a>
               <a href="#" class="text-gray-800 text-sm  hover:text-[#1435c3] mr-4">
                 <fa-icon [icon]="bellIcon"></fa-icon>
