--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,4 +1,14 @@
-
+@import 'swiper/scss';
+@import 'swiper/scss/navigation';
+@import 'swiper/scss/pagination';
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-img {
+  height: 633px;
+  object-fit: cover;
+}
 /* slides.component.scss */
 .slide {
   padding: 0.4rem 0.6rem;
