--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -29,7 +29,10 @@
     </ng-template>
 
   </swiper>
+  <!-- tabs -->
+  <!-- end tabs -->
   <div class="flex flex-col justify-center items-center bg-[#F8F8FC]">
+
     <section class=" min-h-screen body-font text-gray-600 sm:px-3 lg:px-40 ">
       <div class="container mx-auto px-5 py-10">
         <div class="-m-4 bg-white flex flex-wrap  ">
