--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,17 @@
 <router-outlet></router-outlet>
 
 <div class="">
-  <button *ngFor="let contact of contacts"
-    class="fixed right-[10px] text-[#fff] bottom-[100px] w-[50px] h-[50px] p-[8px] rounded-[50%]   z-[1000]  "
-    data-tooltip-placement="left" data-tooltip-target="tooltip-left"
-    [ngClass]="contact.id ===contact.id ? contact.style : ''">
-    <fa-icon [icon]="contact.icon"></fa-icon>
 
-  </button>
+  <a *ngFor="let contact of contacts" target="_blank" href="{{contact.link}}">
+    <button [title]="contact.tooltip"
+      class="fixed right-[10px] text-[#fff] bottom-[100px] w-[50px] h-[50px] p-[8px] rounded-[50%]    z-[1000]  "
+      data-tooltip-placement="left" data-tooltip-target="tooltip-left"
+      [ngClass]="contact.id ===contact.id ? contact.style : ''">
+      <div class="flex justify-center items-start">
+        <fa-icon [icon]="contact.icon"></fa-icon>
+      </div>
+    </button>
+  </a>
 </div>
 <button
   class="fixed right-[15px] text-[#fff] bottom-[30px] text-[50px] w-[50px] h-[50px] p-[8px] rounded-[50%]   z-[1000] "
