--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -54,7 +54,8 @@
                 <!-- record 1 -->
                 <tr class="" *ngFor="let cart of listProductCart">
                   <td class="p-2">
-                    <input type="checkbox" class="w-5 h-5" value="id-1" />
+                    <input type="checkbox" (change)="checkCheckBoxvalue($event)" [checked]="cart.checked"
+                      class="w-5 h-5" value="id-1" />
                   </td>
                   <td class="p-2">
                     <div class="text-xs text-color-main">
@@ -78,7 +79,7 @@
                           <input type="number"
                             class="focus:outline-none text-center w-full font-semibold text-md hover:text-black focus:text-black md:text-basecursor-default flex items-center text-gray-700 outline-none"
                             name="custom-input-number " value="{{ cart.amount}}" />
-                          <button (click)="countUp(cart.id,cart.priceDiscount)" data-action="increment"
+                          <button (click)=" countUp(cart.id,cart.priceDiscount)" data-action="increment"
                             class="h-full w-20 rounded-r cursor-pointer">
                             <span class="m-auto text-2xl font-thin">+</span>
                           </button>
